[project]
name = "dpfl_lib"
version = "0.1.0"
description = "Differential Privacy and Federated Learning for Hate Speech Detection"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "dp-transformers @ {root:uri}/microsoft_src",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.1.8",
    "cryptography==44.0.3",
    "flwr==1.22.0",
    "grpcio==1.76.0",
    "grpcio-health-checking==1.62.3",
    "idna==3.11",
    "iterators==0.0.2",
    "joblib==1.5.2",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "numpy==2.2.6",
    "pathspec==0.12.1",
    "protobuf==4.25.8",
    "pycparser==2.23",
    "pycryptodome==3.23.0",
    "Pygments==2.19.2",
    "PyYAML==6.0.3",
    "requests==2.32.5",
    "rich==13.9.4",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "shellingham==1.5.4",
    "threadpoolctl==3.6.0",
    "tomli==2.3.0",
    "tomli_w==1.2.0",
    "typer==0.12.5",
    "typing_extensions==4.15.0",
    "urllib3==2.5.0",
    "uv==0.9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dpfl_lib"]